100% height on <body>

--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-bluetick bg-center bg-no-repeat h-screen bg-cover">
+  <body class="bg-bluetick bg-center bg-no-repeat h-full bg-cover">
     {% include "./partials/navbar.html" %}
 
     {{ content | safe }}
