--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -2,7 +2,7 @@
     <nav class="flex items-center justify-center lg:justify-between flex-wrap p-6 lg:px-0 container mx-auto" x-data="{ isOpen: false }" @keydown.escape="isOpen = false"  @click.away="isOpen = false">
         <!--Logo etc-->
         <div class="flex items-center">
-            <a href="/" class="text-blue-600 font-bold text-lg">Matthew Zhu</a>
+            <a href="/" class="text-blue-600 font-bold text-lg"><img class="w-12 h-12 rounded-full" src="/static/img/bluetick-profile-close.jpg"/></a>
         </div>
 
         <!--Toggle button (hidden on large screens)-->
