--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -1,9 +1,7 @@
 <div class="{{ 'hidden' if path == 'home' }} w-full">
-    <nav class="flex items-center justify-center lg:justify-between flex-wrap p-6 lg:px-0 container mx-auto" x-data="{ isOpen: false }" @keydown.escape="isOpen = false"  @click.away="isOpen = false">
+    <nav class="flex items-center justify-center lg:justify-between flex-wrap p-6" x-data="{ isOpen: false }" @keydown.escape="isOpen = false"  @click.away="isOpen = false">
         <!--Logo etc-->
-        <div class="flex items-center">
-            <a href="/" class="text-blue-600 font-bold text-lg"><img class="w-12 h-12 rounded-full" src="/static/img/bluetick-profile-close.jpg"/></a>
-        </div>
+        <a href="/"><img class="w-12 h-12 rounded-full" src="/static/img/bluetick-profile-close.jpg"/></a>
 
         <!--Toggle button (hidden on large screens)-->
         <button @click="isOpen = !isOpen" type="button" class="ml-auto block lg:hidden px-2 text-primary-500 hover:text-primary-500 focus:outline-none focus:text-primary-500" :class="{ 'transition transform-180': isOpen }" aria-label="Menu">
