Add footer links

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,7 +1,7 @@
 
-<footer class="{{ 'hidden' if path == 'home' }} bottom-0 text-center w-full py-4">
+<footer class="{{ 'hidden' if path == 'home' }} bottom-0 text-center w-full py-6">
     <small class="text-gray-500">
-        Thanks for stopping by!
+        blue tick sound, 2022
         {% for link in links.links %}
         • <a href="{{link.url}}" target="_blank" class="underline">{{link.title}}</a>
         {% endfor %}
