--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -33,7 +33,7 @@
       <!-- Netlify Identity Widget -->
       <!-- Needed only if you are using Netlify Identity feature -->
       <script type="text/javascript" src="/static/js/ripple.js"></script>
-      <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+      <!--script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script-->
     {% endif %}
 
   </body>
