Try preloading a low-res background first

--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
   <head>
+    <img rel="preload" as="image" href="/static/img/bluetick-bg-3950-2800-low-q.jpeg">
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
