--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -1,4 +1,4 @@
-<div class="{{ 'hidden' if path == 'home' }} w-full">
+<div class="w-full">
     <nav class="flex items-center justify-center lg:justify-between flex-wrap p-6" x-data="{ isOpen: false }" @keydown.escape="isOpen = false"  @click.away="isOpen = false">
         <!--Logo etc-->
         <a href="/"><img class="w-12 h-12 rounded-full" src="/static/img/bluetick-profile-close.jpg"/></a>
