Don't load footer on homepage

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="{{ 'hidden' if path == 'home' }} bottom-0 text-center w-full py-6">
+<footer class="bottom-0 text-center w-full py-6">
     <small class="text-gray-500">
         blue tick sound, 2022
         {% for link in links.links %}
