--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
   <head>
-    <img rel="preload" as="image" href="/static/img/bluetick-bg-3950-2800-low-q.jpeg"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -25,7 +24,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.2/pixi.min.js"></script>
   </head>
   <body class="h-full">
     {% if path != "home" %}
@@ -41,9 +39,12 @@
     <script src="/static/js/alpine.js"></script>
 
     {% if path == "home" %}
+      <img class="hidden" src="/static/img/bluetick-bg-3950-2800-low-q.jpeg">
+      <script type="text/javascript" src="/static/js/ripple.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.2/pixi.min.js"></script>
+
       <!-- Netlify Identity Widget -->
       <!-- Needed only if you are using Netlify Identity feature -->
-      <script type="text/javascript" src="/static/js/ripple.js"></script>
       <!--script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script-->
     {% endif %}
 
